Most tests work, made some progress